--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,5 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
